[gd_scene load_steps=10 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://ScreenShake.gd" type="Script" id=3]
[ext_resource path="res://Ball.tscn" type="PackedScene" id=4]
[ext_resource path="res://PlayerInputComponent.gd" type="Script" id=5]
[ext_resource path="res://AiInputComponent.gd" type="Script" id=6]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=7]
[ext_resource path="res://Field.tscn" type="PackedScene" id=8]
[ext_resource path="res://GameOverScreen.tscn" type="PackedScene" id=9]

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="Field" parent="." instance=ExtResource( 8 )]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 100, 384 )

[node name="Player" parent="." groups=[
"racket",
] instance=ExtResource( 2 )]
position = Vector2( 100, 386 )

[node name="PlayerInputComponent" type="Node" parent="Player"]
script = ExtResource( 5 )

[node name="Bot" parent="." groups=[
"racket",
] instance=ExtResource( 2 )]
position = Vector2( 1266, 386 )

[node name="AiInputComponent" type="Node" parent="Bot"]
script = ExtResource( 6 )
ball_path = NodePath("../../Ball")

[node name="Ball" parent="." instance=ExtResource( 4 )]
position = Vector2( 683, 384 )
collision_layer = 3

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" parent="CanvasLayer" instance=ExtResource( 7 )]

[node name="GameOverScreen" parent="CanvasLayer" instance=ExtResource( 9 )]
visible = false

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 683, 384 )
current = true

[node name="ScreenShake" type="Node" parent="Camera2D"]
script = ExtResource( 3 )

[node name="ShakeTween" type="Tween" parent="Camera2D/ScreenShake"]

[node name="Frequency" type="Timer" parent="Camera2D/ScreenShake"]

[node name="Duration" type="Timer" parent="Camera2D/ScreenShake"]
[connection signal="goal_left" from="Field" to="." method="_on_Field_goal_left"]
[connection signal="goal_left" from="Field" to="Camera2D/ScreenShake" method="start" binds= [ 0.2, 15.0, 16.0, 1.0 ]]
[connection signal="goal_right" from="Field" to="." method="_on_Field_goal_right"]
[connection signal="goal_right" from="Field" to="Camera2D/ScreenShake" method="_on_Field_goal_right" binds= [ 0.2, 15.0, 16.0, 1.0 ]]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="exploded" from="Ball" to="." method="_on_Ball_exploded"]
[connection signal="exit" from="CanvasLayer/GameOverScreen" to="." method="_on_GameOverScreen_exit"]
[connection signal="new_round" from="CanvasLayer/GameOverScreen" to="." method="_on_GameOverScreen_new_round"]
[connection signal="timeout" from="Camera2D/ScreenShake/Frequency" to="Camera2D/ScreenShake" method="_on_Frequency_timeout"]
[connection signal="timeout" from="Camera2D/ScreenShake/Duration" to="Camera2D/ScreenShake" method="_on_Duration_timeout"]
